scrollbar issue

--- a/stories/Utilities/Scroll-bar/scrollbar.scss
+++ b/stories/Utilities/Scroll-bar/scrollbar.scss
@@ -6,11 +6,10 @@
   float: left;
   max-width: $width-600;
   width: 100%;
-  height: 70vh;
 }
 
 .scrollbar-data {
- // visibility: hidden;
+  visibility: hidden;
   width: 1000px;
 }
 
