--- a/stories/assets/scss/_base.scss
+++ b/stories/assets/scss/_base.scss
@@ -43,13 +43,9 @@
   overflow-x: scroll;
 
   &::-webkit-scrollbar-track {
-      //background: linear-gradient(0deg, transparent 10%, $color-black 33%, transparent 0);
-      // background: $color-red;
-      // background-size: 2px;
-      //  height: 1px!important;
-        border-bottom: 1px solid black;
+      border-bottom: 1px solid $color-black;
+      margin-right: -1px;
 
-        height: 1px;
   }
 
   &::-webkit-scrollbar {
@@ -66,11 +62,8 @@
   overflow-y: scroll;
 
   &::-webkit-scrollbar-track {
-      //background: linear-gradient(90deg, transparent 10%, $color-black 33%, transparent 0);
-      //background: $color-black;
-      //background: linear-gradient(90deg, transparent 10%, $color-black 33%, transparent 0);
-      width: 1px;
-              border-right: 1px solid black;
+    border-right: 1px solid $color-black;
+    margin-bottom: -1px;
   }
 
   &::-webkit-scrollbar {
